# semantic-sift

./: .coverage  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  benchmark_sift.py  pipes.json  pyproject.toml  requirements.txt  server.py  setup.py  sift_hook.py  sift_kernel.py  telemetry_core.py
.gemini/: settings.json
.github/workflows/: ci.yml  close_prs.yml  release-binaries.yml  release.yml
.serena/: project.yml
benchmarks/data/: SOURCES.md  corporate_spec.html  engineering_spec.html  git_diff.txt  git_history.txt  github_actions.txt  mcp_architecture.html  natural_language.txt  npm_install.txt  project_report.xlsx  sample_prd.docx  vercel_logs.txt
benchmarks/results/: aws_framework_sifted.txt  corporate_spec_sifted.txt  engineering_spec_sifted.txt  financial_sample_sifted.txt  git_diff_sifted.txt  git_history_sifted.txt  github_actions_sifted.txt  linux_system_logs_sifted.txt  mcp_architecture_sifted.txt  natural_language_sifted.txt  npm_install_sifted.txt  project_report_sifted.txt  sample_prd_sifted.txt  sources_sifted.txt  vercel_logs_sifted.txt
crates/sift-core/: Cargo.toml  README.md
crates/sift-core/benches/: sift_bench.rs
crates/sift-core/src/: lib.rs  main.rs
crates/sift-core/tests/: error_handling.rs
demo/: README.md  sidecar_demo.js
doc/: AGENTIC_CHAIN_PROTOCOL.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTEXT_PIPE_PROTOCOL.md  IDE_MCP_INTEGRATION_WIKI.md  INDEX.md  INTEGRATION_ENCYCLOPEDIA.md  MCP_CONFIG_EXAMPLES.md  ORCHESTRATION_BLUEPRINTS.md  TELEMETRY.md  TELEMETRY_SPEC.md  TOOL_REFERENCE.md
doc/bug/: ANTIGRAVITY_TELEMETRY_MISATTRIBUTION.md  EVALUATION_REPORT_2026_04_28.md  EVALUATION_REPORT_2026_04_29.md  FIX_PLAN_5_STAR.md  FIX_PLAN_PROFESSIONAL_GRADE.md  SEMANTIC_SIFT_BUG_REPORT.md  UNSHIELDED_ENV_MANDATE_BYPASS.md
scripts/: audit.bat  fetch_sift_core.py  verify_file_sift.py
semantic_sift/: __init__.py  cli.py  hook.py  hook_injector.py  kernel.py  onboarding.py  onboarding_cli.py  server.py  telemetry.py  telemetry_cli.py  tools.py
tests/: test_cpp_integration.py  test_extraction_and_compaction.py  test_hook_injector.py  test_hook_integration.py  test_hook_routing.py  test_kernel_ranking.py  test_kernel_semantic.py  test_module_wrappers.py  test_onboarding.py  test_platform_gateways.py  test_security.py  test_server_tools.py  test_sieve.py  test_telemetry.py  verify_file_sift.py
