[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-sift"
version = "0.2.0"
description = "Reasoning-first MCP middleware for context distillation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "Luis Kobayashi" }
]
dependencies = [
  "mcp",
  "numpy",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "markitdown",
  "psutil"
]

[project.optional-dependencies]
neural = [
  "llmlingua",
  "torch",
  "transformers",
  "sentence-transformers"
]

dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy"
]

[project.scripts]
semantic-sift = "server:main"

[tool.setuptools]
py-modules = ["server", "sift_kernel", "sift_hook", "telemetry_core"]

[tool.setuptools.packages.find]
include = ["semantic_sift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["semantic_sift", "sift_kernel", "telemetry_core", "sift_hook"]
omit = ["tests/*", "benchmark_sift.py"]

[tool.coverage.report]
show_missing = true
