[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-sift"
version = "0.2.0"
description = "Reasoning-first MCP middleware for context distillation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Luis Kobayashi" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.0",
  "numpy>=1.24",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "psutil>=5.9"
]

[project.optional-dependencies]
neural = [
  "llmlingua",
  "torch",
  "transformers",
  "sentence-transformers"
]

multi-modal = [
  "markitdown>=0.1"
]

dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy"
]

[project.scripts]
semantic-sift = "server:main"
semantic-sift-stats = "semantic_sift.telemetry_cli:main"
semantic-sift-onboard = "semantic_sift.onboarding_cli:main"

[tool.setuptools]
py-modules = ["server", "sift_kernel", "sift_hook", "telemetry_core"]

[tool.setuptools.packages.find]
include = ["semantic_sift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["semantic_sift", "sift_kernel", "telemetry_core", "sift_hook"]
omit = ["tests/*", "benchmark_sift.py"]

[tool.coverage.report]
show_missing = true
