[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-sift"
version = "0.3.5"
description = "Reasoning-first MCP middleware for context distillation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Luis Kobayashi" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.0",
  "numpy>=1.24",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "psutil>=5.9"
]

[project.optional-dependencies]
neural = [
  "llmlingua",
  "torch",
  "transformers",
  "sentence-transformers"
]

multi-modal = [
  "markitdown>=0.1"
]

# Install the pre-built Rust sift-core binary for maximum performance.
# The PyPI wheel already includes sift-core for your platform.
# For editable/dev installs, run: python scripts/fetch_sift_core.py
native = []

dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy"
]

[project.scripts]
semantic-sift = "semantic_sift.server:main"
semantic-sift-stats = "semantic_sift.telemetry_cli:main"
semantic-sift-onboard = "semantic_sift.onboarding_cli:main"
semantic-sift-cli = "semantic_sift.cli:main"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
include = ["semantic_sift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["semantic_sift"]
omit = ["tests/*", "benchmark_sift.py"]

[tool.coverage.report]
show_missing = true
